 * (trac #96) Added Fulfilled Orders page
 * (trac #92) Fixed a bug preventing you from scrolling the server IP list
 * (trac #95) Added checks for blank domain fields in the Order interface
 * (trac #97) Domain contact box no longer shows up when there are no domains in the order
 * (trac #98) Made asthetic improvements to the shopping cart on the review page

7/31/2006 - jdiamond
====================

 * (trac #94) Fixed reseller club debug flag bug
 * (trac #91) Added a subject field to the invoice email page

7/30/2006 - jdiamond
====================

 * Fixed several bugs in the Manager & Order interfaces that were located during testing
 * Expanded the 'username' field from 10 characters to 32
 * (trac #13) - Made the page loader more efficient by only loading the class file for the page being requested

7/29/2006 - jdiamond
====================

 * (trac #84) - Added an install script

7/23/2006 - jdiamond
====================

 * Fixed a bug causing orders for a hosting service with term != 1 month to be $0

7/22/2006 - jdiamond
====================

 * Added a login page for the order interface (for repeat customers)
 * (trac #88) - Implemented per-user language preferences.

7/20/2006 - jdiamond
====================

 * Added order notification and confirmation e-mails.  You can customize them through the Settings page.
 * Removed the expiration date from the hosting services page.  With auto-recurring now supported in the invoice
   code, this is no longer necessary.
 * Added a "contact registrar" button to the edit/renew domain page
 * (trac #21, #71) The billing & invoices code was cleaned up and a few bugs relating to past purchases being 
   billed correctly were fixed.

  *** PLEASE NOTE: this commit contains a new database scheme ***

7/15/2006 - jdiamond
====================

 * (trac #23) Add sub-total and tax-total to invoices.

7/14/2006 - jdiamond
====================
